WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58312
REGRESSION(
r83561
): doesn't pause in-window playback during fullscreen playback
https://bugs.webkit.org/show_bug.cgi?id=58312
Summary
REGRESSION(r83561): doesn't pause in-window playback during fullscreen playback
Philippe Normand
Reported
2011-04-12 03:29:54 PDT
The videoValve is not linked if fpsdisplaysink is used.
Attachments
proposed patch
(3.50 KB, patch)
2011-04-12 03:32 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2011-04-12 03:32:02 PDT
Created
attachment 89183
[details]
proposed patch
Martin Robinson
Comment 2
2011-04-12 07:26:24 PDT
Comment on
attachment 89183
[details]
proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=89183&action=review
Is it possible to include a test with this change?
> Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:1714 > if (!m_fpsSink) { > gst_bin_add(GST_BIN(m_videoSinkBin), m_webkitVideoSink); > + actualVideoSink = m_webkitVideoSink; > + } > +
I think it makes sense to turn if (!m_fpsSink) into an else statement here.
Philippe Normand
Comment 3
2011-04-12 09:33:03 PDT
(In reply to
comment #2
)
> (From update of
attachment 89183
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=89183&action=review
> > Is it possible to include a test with this change? > > >
I don't think this can be tested. The fact that we have 2 video-sinks is internal to the private media-player :/ Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:1714
> > if (!m_fpsSink) { > > gst_bin_add(GST_BIN(m_videoSinkBin), m_webkitVideoSink); > > + actualVideoSink = m_webkitVideoSink; > > + } > > + > > I think it makes sense to turn if (!m_fpsSink) into an else statement here.
OK. I can attach a new patch or do that tweak before landing if you r+ this.
Philippe Normand
Comment 4
2011-04-12 09:40:18 PDT
(In reply to
comment #2
)
> (From update of
attachment 89183
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=89183&action=review
> > Is it possible to include a test with this change? > > > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:1714 > > if (!m_fpsSink) { > > gst_bin_add(GST_BIN(m_videoSinkBin), m_webkitVideoSink); > > + actualVideoSink = m_webkitVideoSink; > > + } > > + > > I think it makes sense to turn if (!m_fpsSink) into an else statement here.
Hum sorry but I don't think so, finally :) m_fpsSink can be set to 0 in 2 cases just above this code, in the if (m_fpsSink) test. Turning this if (!m_fpsSink) to a else would require to duplicate the code, I think.
Martin Robinson
Comment 5
2011-04-13 08:41:54 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > (From update of
attachment 89183
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=89183&action=review
> > Is it possible to include a test with this change? > I don't think this can be tested. The fact that we have 2 video-sinks is internal to the private media-player :/
Alright. Please include a line in the ChangeLog explaining the lack of test, per typical WebCore ChangeLog style. :)
Philippe Normand
Comment 6
2011-04-13 08:51:37 PDT
Committed
r83741
: <
http://trac.webkit.org/changeset/83741
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug