2011-04-12  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        REGRESSION(r83561): doesn't pause in-window playback during fullscreen playback
        https://bugs.webkit.org/show_bug.cgi?id=58312

        Make sure to link the videoValve in all cases, fpsdisplaysink
        being used or not.

        No new test, this patch fixes an internal feature of the player,
        not publicly exposed. Having two video sinks and pausing one while
        the other displays the fullscreen video is an implementation
        detail of the GStreamer player.

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):

Canonical link: https://commits.webkit.org/73498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83741 268f45cc-cd09-0410-ab3c-d52691b4dbfc